pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  namespace: default
  labels:
    run: app
spec:
  serviceAccountName: your-service-account
  tolerations:
  - key: "key"
    operator: In
    value:
    - value1
    effect: NoSchedule
  nodeSelector:
    webapp: true
  nodeName: food-node # shcedule pod to specific node
  containers:
  - name: pod-name
    image: image-path
    ports:
    - name: named-port
      containerPort: 80
      hostPort: 8080
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        httpHeaders:
        - name: header
          value: value
      exec:
        command:
        - cat
        - /tmp/healthy
      tcpSocket:
        port: 8080
      initialDelaysSeconds: 100
      periodSeconds: 5  
    resources:
      requests:
        cpu: 0.5
        memory: 1Mi
        storage: 50Mi
      limits:
        cpu: 1
        memory: 1Mi
        storage: 50Mi        
    commands:
    - sleep
    args:
    - --path=/opt/test
    securityContext:
      allowPrivilegeEscalation: false
      runAsUser: 100
      runAsGroup: 200
      fsGroup: 3000
      capabilities:
        add: ["SYS_TIME"]
    restartPolicy: Never 
    volumeMounts:
    - name: secret-volume
      mountPath: /path/at/secret
    - name: config-volume
      mountPath: /path/at/config      
    - name: pv-volume
      mountPath: /path/at/pv   
    - name: empty-dir
      mountPath: /path/empty-dir         
  volumes:
  - name: secret-volume
    secret:
      secretName: secret-name
      defaultMode: 256
      items:
      - key: KEY1
        path: KEY1
        mode: 521
  - name: configmap-volume
    configMap:
      name: configmap-name  
      items:
      - key: KEY1
        path: KEY1
  - name: pvc-volume
    persistentVolumeClaim:
      claimName: pvc-name
  - name: empty-dir
    emptyDir: {}
