service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
spec:
  selector:
    key: value
  type: NodePort # ClusterIP
  # clusterIP: None for headless
  # clusterIP: 10.13.33.33
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30013
    protocol: TCP
